
	2013-06-28
	* Fix three crashes in command line and environment variable parsers
	  that caused NULL pointer dereferences with long option variants
	  of bogofilter --syslog-tag, or bogoutil --timestamp-date, or when
	  bogotune -M<file> cannot derive the bogofilter directory.
	  Reported by Alexandre Rebert, found with Mayhem tool.

	2013-01-20
	* Change lexer API/ABI a bit so as to work with flex 2.5.36 generated
	  lexers (for instance, on Fedora 18 "Spherical Cow") that flip the
	  type of yyleng from int to size_t. We use a signed long internally.

	2012-12-30
	* The bogofilter project was updated to the new SourceForge.net
	  platform. This has caused the URLs to change. Use one of these
	  commands for a read-only checkout:
	  svn checkout svn://svn.code.sf.net/p/bogofilter/code/trunk bogofilter
	  svn checkout http://svn.code.sf.net/p/bogofilter/code/trunk bogofilter

	  And developers would use, replacing joe by their sf.net login:
	  svn checkout --username=joe svn+ssh://m-a@svn.code.sf.net/p/bogofilter/code/trunk bogofilter

	2012-12-03
	* Add bogofilter-SA-2012-01 (CVE-2012-5468).
	* Fix XML form of Bulgarian FAQ so that it validates;
	  and validate XHTML at build time.
	* Mark Berkeley DB 5.2.42 and 5.3.21 supported.

1.2.3	2012-12-02 (released)

	2012-10-24
	* Update configure.ac to avoid autoconf 2.68 warnings, by 
	  (a) quoting the first AC_RUN_IFELSE argument, an
	      AC_LANG_PROGRAM(), with [ ], and
	  (b) providing an explicit "true" assumption for Berkeley DB
	      capabilities to avoid cross-compilation warnings.

	2012-10-22
	* Security bugfix for CVE-2012-5468 (bogofilter-SA-2012-01):
	  Fix a heap corruption in base64 decoder on invalid input.
	  Analysis and patch by Julius Plenz <plenz@cis.fu-berlin.de>.

	2011-01-02
	* Added bogofilter-faq-bg.html, a Bulgarian translation of the FAQ.
	  (thanks to Albert Ward)

	2010-10-29
	* Mark "Berkeley DB 5.1.19: (August 27, 2010)" supported.


1.2.2	2010-07-08 (released)

	2010-07-05